new schools added, policy and pae updated

--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -13,8 +13,8 @@
         <a href="http://www.leapsonline.org/node/1089">higher education institution and
         local council partners</a> to increase progression to higher education in South East Scotland. We aim to encourage and
         advise students who are traditionally under-represented in higher education and we currently work with 
-        <a href="http://www.leapsonline.org/node/1137">59</a>
-        schools throughout South East Scotland, supporting pupils who match
+        <a href="http://www.leapsonline.org/node/1137">schools</a>
+        throughout South East Scotland, supporting pupils who match
         <a href="http://www.leapsonline.org/node/1081">LEAPS eligibility criteria</a>. LEAPS is also
         supported by Skills Development Scotland and delivers the Scottish Funding Council's 
         <a href="http://www.sfc.ac.uk/access-inclusion/access-initiatives/access-initiatives.aspx">Schools for Higher Education
