--- a/portality/templates/leaps/universities/index.html
+++ b/portality/templates/leaps/universities/index.html
@@ -67,7 +67,7 @@ jQuery(document).ready(function() {
                     <tr>
                         <th>First Name</th>
                         <th>Last Name</th>
-                        <th>Candidate No.</th>
+                        <th>SCN</th>
                         <th>Date of Birth</th>
                         <th style="width:200px;">Subject</th>
                         <th>Level</th>
