--- a/portality/templates/leaps/exports/index.html
+++ b/portality/templates/leaps/exports/index.html
@@ -109,7 +109,7 @@ jQuery(document).ready(function() {
                     <tr>
 	                    <td><input type="checkbox" name="id"> Record ID</td>
 	                    <td></td>
-	                    <td></td>
+                        <td><input type="checkbox" name="particular_queries"> Particular queries</td>
 	                    <td><input type="checkbox" name="place_in_siblings"> Place in siblings</td>
                     </tr>
                     
@@ -167,6 +167,20 @@ jQuery(document).ready(function() {
 	                    <td></td>
 	                    <td></td>
 	                    <td><input type="checkbox" name="leaps_notes"> LEAPS notes</td>
+                    </tr>
+
+        	        <tr>
+	                    <td></td>
+	                    <td></td>
+	                    <td></td>
+	                    <td><input type="checkbox" name="estranged"> Estranged</td>
+                    </tr>
+
+        	        <tr>
+	                    <td></td>
+	                    <td></td>
+	                    <td></td>
+	                    <td><input type="checkbox" name="transition_course"> LEAPS transition course</td>
                     </tr>
 
                 </tbody>
