--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -946,6 +946,15 @@ input.bigfield{
 	    </div>
 	</div>
 
+	<div class="row">
+	    <div class="col-md-4">
+            <p>Do you have any particular queries or concerns that you would like covered at your LEAPS Interview?</p>
+	    </div>
+	    <div class="col-md-8">
+            <p><textarea class="form-control" name="particular_queries"></textarea></p>
+	    </div>
+	</div>
+
 </div>
 
 
