alter emails that get sent to, and privacy policy

--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -31,7 +31,7 @@
 Higher Education.</li>
             <li>To inform you of information, activities and events that may support your interest in and transition to
 Further and Higher Education.</li>
-            <li>To inform Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS
+            <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS
 programme.</li>
             <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the
 LEAPS programme.</li>
@@ -59,6 +59,7 @@ LEAPS programme.</li>
             <li>Organisations involved in co-delivering LEAPS events. (These organisations will be outlined when you register
 for LEAPS events, or as soon as possible thereafter).</li>
             <li>Skills Development Scotland.</li>
+            <li>UCAS</li>
         </ul>
 
         <p>We will hold the personal data you provided us for up to 3 years. After this time all identifiable personal data will be
