--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -94,7 +94,7 @@ jQuery(document).ready(function() {
     var editrow = function(event) {
         event.preventDefault();
         $(this).parent().parent().children('td').each(function() {
-            if (!(this).hasClass('noedit') && $(this).children('input').length) {
+            if (!$(this).hasClass('noedit') && $(this).children('input').length) {
                 var val = $(this).children('input').first().val();
                 var name = $(this).children('input').first().attr('name');
                 var seltype = name.split('_')[1] + 's';
